--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -38,7 +38,14 @@
                                     name="email" placeholder="abc@xyz"
                                     id="email" required>
                                 </fieldset>
-                
+
+                                <fieldset class="form-group">
+                                        <label for="displayName">Display Name: </label>
+                                        <input type="text" class="form-control"
+                                        name="displayName" placeholder="Enter Display Name"
+                                        id="displayName" required>
+                                </fieldset>
+
                             
                                 <br> 
                                 <fieldset class="form-group text-right">
